# bbnm-telebot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: commands.rs  downloader.rs  handlers.rs  main.rs  parsers.rs  services.rs  utils.rs
src/commands/: commands_enum.rs  simple_commands_handler.rs
src/downloader/: bili_down.rs
src/handlers/: b23_handler.rs  text_handler.rs
src/parsers/: bili_parser.rs
src/services/: bili_struct.rs  http_bili.rs  http_common.rs
src/utils/: files.rs  users.rs
