[package]
name = "bbnm-telebot"
version = "0.1.0"
edition = "2024"
description = "Telebot for Six-Prison Alliance. Anti BB link tracking."
license = "MIT"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4.27"
tokio = { version =  "1.44.2", features = ["rt-multi-thread", "macros"] }

lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.15"
