[package]
name = "bbnm-telebot"
version = "0.1.0"
edition = "2024"
description = "Telebot for Six-Prison Alliance. Anti BB link tracking."
license = "MIT"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
pretty_env_logger = "0.5"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

regex = "1.11.1"
reqwest = "0.12.15"
tokio-util = { version = "0.7.14", features = ["io"] }

bilirust = { git = "https://github.com/niuhuan/bilirust.git", branch = "master" }
futures = "0.3.31"
anyhow = "1.0.97"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"